# nocodb-py

./: .env  .env.example  .gitignore  .nocodbrc.example  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MIGRATION.md  NOTICE  README.md  docker-compose.yml  e2e-progress.txt  setup.py
.claude/plans/: cli-icon-meta-support.md  cli-simplification-plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
docs/: DOKPLOY_DEPLOYMENT.md  FILTERS.md  MCP.md  architecture.pxz
docs/bugs/: BUG-001-view-columns-update-500.md  bugs.json
docs/tasks/: TASK-001-remove-v1-legacy-code.md
nocobot/: .env.example  Dockerfile  __init__.py  __main__.py  agent.py  config.py  main.py  mcp_client.py  pyproject.toml
nocobot/bus/: __init__.py  queue.py
nocobot/channels/: __init__.py  base.py  telegram.py
nocobot/providers/: __init__.py  litellm_provider.py  registry.py
nocodb/: Dockerfile  __init__.py  __main__.py  api.py  core.py  nocodb.py  schema_utils.py  setup.py  utils.py
nocodb/cli/: __init__.py  __main__.py  client.py  config.py  formatters.py  generated.py  main.py  skill.md  wrapper.py
nocodb/docs/: CLI.md  DEPLOY_MCP.md  DOKPLOY_DEPLOYMENT.md  MCP.md  SDK.md  pr-overview.md
nocodb/filters/: __init__.py  factory.py  factory_test.py  filters_test.py  logical.py  logical_test.py  raw_filter.py
nocodb/infra/: requests_client.py  requests_client_test.py
nocodb/mcp/: __init__.py  (+6 more)
scripts/: export_base_schema.py  export_table_schema.py  regenerate-cli.sh  run-mcp.sh
skills/: nocodb-mcp-prompt.md  nocodbv3.md  schema-design.md
(+46 files in other folders)
